--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,7 +5,7 @@
 
 .logo {
   position: absolute;
-  z-index: 999;
+  z-index: 100;
 }
 
 .header {
@@ -93,7 +93,7 @@
   width: 100%;
   max-width: 1150px;
   margin: 0 auto;
-  z-index: 999 !important;
+  z-index: 1;
   margin-top: 7%;
 }
 
@@ -283,11 +283,10 @@ footer h1 {
 .contacto {
   max-width: 500px;
   width: 100%;
-  z-index: 999;
+  z-index: 100;
   text-align: center;
   line-height: 25px;
   margin: 0 auto;
-  z-index: 999;
   position: relative;
   padding-top: 10%;
 }
@@ -301,7 +300,7 @@ footer h1 {
   max-width: 750px;
   width: 100%;
   height: auto;
-  z-index: 999;
+  z-index: 100;
   margin: 0 auto;
   position: relative;
   text-align: center;
@@ -362,15 +361,29 @@ footer h1 {
 
 @media (min-width: 200px) {
 
+  .logo {
+    width: 243px;
+  }
+
+  .icon-mobile {
+    display: block;
+  }
+
+  .icon-mobile img {
+    width: 45px !important;
+    margin: 10px;
+  }
+
   .navbar {
-    height: 100%;
+    height: 60px;
     width: 100%;
     margin: 0 auto;
     background: rgb(0, 0, 0,0.8);
     z-index: 999;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     position: fixed;
+    cursor: pointer;
   }
 
   .nav-list {
@@ -380,6 +393,13 @@ footer h1 {
     gap: 3rem;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    position: fixed;
+    top: 60px;
+    left: 100%;
+    transition: left 0.5s;
+    background: rgb(0, 0, 0,0.8);
+    padding-bottom: 30px;
   }
 
   .section-atractivos {
@@ -510,6 +530,14 @@ footer h1 {
 
 @media (min-width: 1200px) {
 
+  .logo {
+    width: auto;
+  }
+
+  .icon-mobile {
+    display: none;
+  }
+
   .navbar {
     height: 60px;
     width: 100%;
@@ -528,6 +556,9 @@ footer h1 {
     justify-content: center;
     align-items: center;
     flex-direction: row;
+    position: initial;
+    padding-bottom: 0px;
+    background: none;
   }
 
   .section-atractivos {
@@ -564,4 +595,8 @@ footer h1 {
   .imagen2 {
     display: block;
   }
+}
+
+.nav-visible {
+  left:0;
 }
